--- a/frontend-web/news-app/src/app/core/posts/edit-post/edit-post.component.html
+++ b/frontend-web/news-app/src/app/core/posts/edit-post/edit-post.component.html
@@ -13,7 +13,7 @@
           <textarea name="content" id="content" formControlName="content" class="h-full shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                     oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
 
-        @if (postForm.get('content')?.touched && postForm.get('content')?.hasError('required')){
+        @if (postForm.get('content')?.touched && (postForm.get('content')?.hasError('required') || postForm.get('content')?.hasError('whitespace'))){
           <div class="text-red-500 text-sm mt-1">Content is required</div>
         }
       </div>
@@ -28,13 +28,9 @@
         }
       </div>
       <button type="submit" class="bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline"
-              [class]="{'opacity-50 hover:bg-pxlGreen hover:opacity-50 cursor-not-allowed': !postForm.valid}" [disabled]="!postForm.valid">
+              [ngClass]="{'opacity-50 bg-pxlGreenH cursor-not-allowed': !postForm.valid}" [disabled]="!postForm.valid">
         Save
       </button>
-<!--      <button (click)="cancel()" class=" text-black hover:text-pxlGreen font-bold py-2 px-4 mb-2 focus:outline-none focus:shadow-outline">-->
-<!--        Cancel-->
-<!--      </button>-->
-      <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
     </form>
   </div>
 }
