--- a/frontend-web/news-app/src/app/core/comments/comment-item/comment-item.component.html
+++ b/frontend-web/news-app/src/app/core/comments/comment-item/comment-item.component.html
@@ -13,15 +13,15 @@
           <div>
           <textarea name="content" id="content" formControlName="content" class="h-full shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Write comment..."
                     oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
-            @if (commentForm.get('content')?.touched && commentForm.get('content')?.hasError('required')){
-              <div class="text-red-500 text-sm mt-1 hidden">Comment is required</div>
+            @if (commentForm.get('content')?.touched && (commentForm.get('content')?.hasError('required') || commentForm.get('content')?.hasError('whitespace'))){
+              <div class="text-red-500 text-sm mt-1">Comment is required</div>
             }
           </div>
             <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
         </form>
         </div>
 
-        <button class="bg-pxlGreen text-white font-bold w-7 h-7 m-auto px-2 rounded-full hover:bg-pxlGreenH" (click)="onSubmit()">
+        <button class="bg-pxlGreen text-white font-bold w-7 h-7 m-auto px-2 rounded-full hover:bg-pxlGreenH" [ngClass]="{'opacity-50 bg-pxlGreenH cursor-not-allowed': !commentForm.valid}" [disabled]="!commentForm.valid" (click)="onSubmit()">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" class="stroke-white size-3">
           <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
         </svg>
