--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -1,4 +1,4 @@
-@if (post$ | async; as post) {
+@if (post$; as post) {
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden my-10">
     <div class="relative h-48 flex items-center justify-center overflow-hidden">
       <img [src]="'post-backgrounds/' + post.category + '.png'" alt="Card Image" width="900" height="191" >
