[TEST] Updated tests

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -61,7 +61,7 @@
                     @if(notification.action === "REJECTION") {rejected}
                     @else if (notification.action === "APPROVAL") {approved}
                     @else {commented on }
-                    your post.
+                    your post ({{notification.postId}}) .
                   </a>
               }
             }
